--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -69,6 +69,24 @@
       }
     }
 
+    function checkAndDispatch(store, action) {
+      if (
+        action.type === ADD_TODO &&
+        action.todo.name.toLowerCase().indexOf('bitcoin') !== -1
+      ) {
+        return alert("Nope. That's a bad idea.");
+      }
+
+      if (
+        action.type === ADD_GOAL &&
+        action.goal.name.toLowerCase().indexOf('bitcoin') !== -1
+      ) {
+        return alert("Nope. That's a bad idea.");
+      }
+
+      return store.dispatch(action);
+    }
+
     // Reducer function
     function todos(state = [], action) {
       switch (action.type) {
@@ -125,7 +143,7 @@
       const text = document.createTextNode(todo.name);
 
       const removeBtn = createRemoveButton(() => {
-        store.dispatch(removeTodoAction(todo.id));
+        checkAndDispatch(store, removeTodoAction(todo.id));
       });
 
       node.appendChild(text);
@@ -133,7 +151,7 @@
 
       node.style.textDecoration = todo.complete ? 'line-through' : 'none';
       node.addEventListener('click', () => {
-        store.dispatch(toggleTodoAction(todo.id));
+        checkAndDispatch(store, toggleTodoAction(todo.id));
       });
 
       document.getElementById('todos')
@@ -143,11 +161,11 @@
     function addGoalToDOM(goal) {
       const node = document.createElement('li');
       const text = document.createTextNode(goal.name);
-      
+
       const removeBtn = createRemoveButton(() => {
-        store.dispatch(removeGoalAction(goal.id));
+        checkAndDispatch(store, removeGoalAction(goal.id));
       });
-      
+
       node.appendChild(text);
       node.appendChild(removeBtn);
 
@@ -160,7 +178,7 @@
       const name = input.value;
       input.value = '';
 
-      store.dispatch(addTodoAction({
+      checkAndDispatch(store, addTodoAction({
         id: generateId(),
         name,
         complete: false,
@@ -172,7 +190,7 @@
       const name = input.value;
       input.value = '';
 
-      store.dispatch(addGoalAction({
+      checkAndDispatch(store, addGoalAction({
         id: generateId(),
         name,
       }));
