--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -69,7 +69,7 @@
       }
     }
 
-    function checkAndDispatch(store, action) {
+    const checker = (store) => (next) => (action) => {
       if (
         action.type === ADD_TODO &&
         action.todo.name.toLowerCase().indexOf('bitcoin') !== -1
@@ -84,7 +84,7 @@
         return alert("Nope. That's a bad idea.");
       }
 
-      return store.dispatch(action);
+      return next(action);
     }
 
     // Reducer function
@@ -117,7 +117,7 @@
     const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals,
-    }));
+    }), Redux.applyMiddleware(checker));
 
     store.subscribe(() => {
       const { goals, todos } = store.getState();
@@ -143,7 +143,7 @@
       const text = document.createTextNode(todo.name);
 
       const removeBtn = createRemoveButton(() => {
-        checkAndDispatch(store, removeTodoAction(todo.id));
+        store.dispatch(removeTodoAction(todo.id));
       });
 
       node.appendChild(text);
@@ -151,7 +151,7 @@
 
       node.style.textDecoration = todo.complete ? 'line-through' : 'none';
       node.addEventListener('click', () => {
-        checkAndDispatch(store, toggleTodoAction(todo.id));
+        store.dispatch(toggleTodoAction(todo.id));
       });
 
       document.getElementById('todos')
@@ -163,7 +163,7 @@
       const text = document.createTextNode(goal.name);
 
       const removeBtn = createRemoveButton(() => {
-        checkAndDispatch(store, removeGoalAction(goal.id));
+        store.dispatch(removeGoalAction(goal.id));
       });
 
       node.appendChild(text);
@@ -178,7 +178,7 @@
       const name = input.value;
       input.value = '';
 
-      checkAndDispatch(store, addTodoAction({
+      store.dispatch(addTodoAction({
         id: generateId(),
         name,
         complete: false,
@@ -190,7 +190,7 @@
       const name = input.value;
       input.value = '';
 
-      checkAndDispatch(store, addGoalAction({
+      store.dispatch(addGoalAction({
         id: generateId(),
         name,
       }));
