--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -87,6 +87,15 @@
       return next(action);
     }
 
+    const logger = (store) => (next) => (action) => {
+      console.group(action.type);
+      console.log('The action: ', action);
+      const result = next(action);
+      console.log('The new state: ', store.getState());
+      console.groupEnd();
+      return result;
+    }
+
     // Reducer function
     function todos(state = [], action) {
       switch (action.type) {
@@ -117,7 +126,7 @@
     const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals,
-    }), Redux.applyMiddleware(checker));
+    }), Redux.applyMiddleware(checker, logger));
 
     store.subscribe(() => {
       const { goals, todos } = store.getState();
