--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -11,22 +11,6 @@
 </head>
 
 <body>
-  <div>
-    <h1>Todo List</h1>
-    <input id="todo" type="text" placeholder="Add Todo">
-    <button id="todoBtn">Add Todo</button>
-    <ul id="todos"></ul>
-  </div>
-
-  <div>
-    <h1>Goals</h1>
-    <input id="goal" type="text" placeholder="Add Goal">
-    <button id="goalBtn">Add Goal</button>
-    <ul id="goals"></ul>
-  </div>
-
-  <hr />
-
   <div id="app"></div>
 
   <script type="text/javascript">
@@ -134,89 +118,6 @@
       todos,
       goals,
     }), Redux.applyMiddleware(checker, logger));
-
-    store.subscribe(() => {
-      const { goals, todos } = store.getState();
-
-      document.getElementById('goals').innerHTML = '';
-      document.getElementById('todos').innerHTML = '';
-
-      goals.forEach(addGoalToDOM);
-      todos.forEach(addTodoToDOM);
-    })
-
-    // DOM code
-    function createRemoveButton(onClick) {
-      const removeBtn = document.createElement('button');
-      removeBtn.innerHTML = 'X';
-      removeBtn.addEventListener('click', onClick);
-
-      return removeBtn;
-    }
-
-    function addTodoToDOM(todo) {
-      const node = document.createElement('li');
-      const text = document.createTextNode(todo.name);
-
-      const removeBtn = createRemoveButton(() => {
-        store.dispatch(removeTodoAction(todo.id));
-      });
-
-      node.appendChild(text);
-      node.appendChild(removeBtn);
-
-      node.style.textDecoration = todo.complete ? 'line-through' : 'none';
-      node.addEventListener('click', () => {
-        store.dispatch(toggleTodoAction(todo.id));
-      });
-
-      document.getElementById('todos')
-        .appendChild(node);
-    }
-
-    function addGoalToDOM(goal) {
-      const node = document.createElement('li');
-      const text = document.createTextNode(goal.name);
-
-      const removeBtn = createRemoveButton(() => {
-        store.dispatch(removeGoalAction(goal.id));
-      });
-
-      node.appendChild(text);
-      node.appendChild(removeBtn);
-
-      document.getElementById('goals')
-        .appendChild(node);
-    }
-
-    function addTodo() {
-      const input = document.getElementById('todo');
-      const name = input.value;
-      input.value = '';
-
-      store.dispatch(addTodoAction({
-        id: generateId(),
-        name,
-        complete: false,
-      }));
-    }
-
-    function addGoal() {
-      const input = document.getElementById('goal');
-      const name = input.value;
-      input.value = '';
-
-      store.dispatch(addGoalAction({
-        id: generateId(),
-        name,
-      }));
-    }
-
-    document.getElementById('todoBtn')
-      .addEventListener('click', addTodo);
-
-    document.getElementById('goalBtn')
-      .addEventListener('click', addGoal);
   </script>
 
   <script type="text/babel">
@@ -225,7 +126,9 @@
         <ul>
           {props.items.map((item) => (
             <li key={item.id}>
-              <span>
+              <span
+                onClick={() => props.toggle && props.toggle(item.id)}
+                style={{textDecoration: item.complete ? 'line-through' : 'none'}}>
                 {item.name}
               </span>
               <button onClick={() => props.remove(item)}>X</button>
@@ -252,6 +155,10 @@
         this.props.store.dispatch(removeTodoAction(todo.id));
       }
 
+      toggleItem = (id) => {
+        this.props.store.dispatch(toggleTodoAction(id));
+      }
+
       render() {
         return (
           <div>
@@ -266,6 +173,7 @@
             <List
               items={this.props.todos}
               remove={this.removeItem}
+              toggle={this.toggleItem}
             />
           </div>
         )
