--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -128,9 +128,19 @@
       }
     }
 
+    function loading(state = true, action) {
+      switch (action.type) {
+        case RECEIVE_DATA:
+          return false;
+        default:
+          return state;
+      }
+    }
+
     const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals,
+      loading,
     }), Redux.applyMiddleware(checker, logger));
   </script>
 
@@ -246,7 +256,11 @@
       
       render() {
         const { store } = this.props;
-        const { todos, goals } = store.getState();
+        const { todos, goals, loading } = store.getState();
+
+        if (loading === true) {
+          return <h3>Loading...</h3>;
+        }
 
         return (
           <div>
