Optimistically Deleting Items

--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -177,6 +177,12 @@
       
       removeItem = (todo) => {
         this.props.store.dispatch(removeTodoAction(todo.id));
+
+        return API.deleteTodo(todo.id)
+          .catch(() => {
+            this.props.store.dispatch(addTodoAction(todo));
+            alert('An error occured. Try again.');
+          });
       }
 
       toggleItem = (id) => {
@@ -218,6 +224,12 @@
       
       removeItem = (goal) => {
         this.props.store.dispatch(removeGoalAction(goal.id));
+
+        return API.deleteGoal(goal.id)
+          .catch(() => {
+            this.props.store.dispatch(addGoalAction(goal));
+            alert('An error occured. Try again.');
+          });
       }
 
       render() {
