--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -187,6 +187,12 @@
 
       toggleItem = (id) => {
         this.props.store.dispatch(toggleTodoAction(id));
+
+        return API.saveTodoToggle(id)
+          .catch(() => {
+            this.props.store.dispatch(toggleTodoAction(id));
+            alert('An error occured. Try again.');
+          });
       }
 
       render() {
