--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -70,6 +70,17 @@
       }
     }
 
+    function handleDeleteTodo(todo) {
+      return (dispatch) => {
+        dispatch(removeTodoAction(todo.id));
+        return API.deleteTodo(todo.id)
+          .catch(() => {
+            dispatch(addTodoAction(todo));
+            alert('An error occured. Try again.');
+          });
+      }
+    }
+
     const checker = (store) => (next) => (action) => {
       if (
         action.type === ADD_TODO &&
@@ -95,6 +106,14 @@
       console.log('The new state: ', store.getState());
       console.groupEnd();
       return result;
+    }
+
+    const thunk = (store) => (next) => (action) => {
+      if (typeof action === 'function') {
+        return action(store.dispatch);
+      }
+
+      return next(action);
     }
 
     // Reducer function
@@ -141,7 +160,7 @@
       todos,
       goals,
       loading,
-    }), Redux.applyMiddleware(checker, logger));
+    }), Redux.applyMiddleware(thunk, checker, logger));
   </script>
 
   <script type="text/babel">
@@ -175,13 +194,7 @@
       }
       
       removeItem = (todo) => {
-        this.props.store.dispatch(removeTodoAction(todo.id));
-
-        return API.deleteTodo(todo.id)
-          .catch(() => {
-            this.props.store.dispatch(addTodoAction(todo));
-            alert('An error occured. Try again.');
-          });
+        this.props.store.dispatch(handleDeleteTodo(todo));
       }
 
       toggleItem = (id) => {
