--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -81,6 +81,28 @@
       }
     }
 
+    function handleDeleteGoal(goal) {
+      return (dispatch) => {
+        dispatch(removeGoalAction(goal.id));
+        return API.deleteGoal(goal.id)
+          .catch(() => {
+            dispatch(addGoalAction(goal));
+            alert('An error occured. Try again.');
+          });
+      }
+    }
+
+    function handleAddGoal(name, callback) {
+      return (dispatch) => {
+        return API.saveGoal(name)
+          .then((goal) => {
+            dispatch(addGoalAction(goal));
+            callback();
+          })
+          .catch(() => alert('There was an error. Try again.'));
+      }
+    }
+
     const checker = (store) => (next) => (action) => {
       if (
         action.type === ADD_TODO &&
@@ -232,22 +254,14 @@
       addItem = (e) => {
         e.preventDefault();
         
-        return API.saveGoal(this.input.value)
-          .then((goal) => {
-            this.props.store.dispatch(addGoalAction(goal));
-            this.input.value = '';
-          })
-          .catch(() => alert('There was an error. Try again.'));
+        this.props.store.dispatch(handleAddGoal(
+          this.input.value,
+          () => this.input.value = ''
+        ));
       }
       
       removeItem = (goal) => {
-        this.props.store.dispatch(removeGoalAction(goal.id));
-
-        return API.deleteGoal(goal.id)
-          .catch(() => {
-            this.props.store.dispatch(addGoalAction(goal));
-            alert('An error occured. Try again.');
-          });
+        this.props.store.dispatch(handleDeleteGoal(goal));
       }
 
       render() {
