--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -70,23 +70,34 @@
       }
     }
 
+    function handleAddTodo(name, callback) {
+      return (dispatch) => {
+        return API.saveTodo(name)
+          .then((todo) => {
+            dispatch(addTodoAction(todo));
+            callback();
+          })
+          .catch(() => alert('There was an error. Try again.'));
+      }
+    }
+
+    function handleToggle(id) {
+      return (dispatch) => {
+        dispatch(toggleTodoAction(id));
+        return API.saveTodoToggle(id)
+          .catch(() => {
+            dispatch(toggleTodoAction(id));
+            alert('An error occured. Try again.');
+          });
+      }
+    }
+
     function handleDeleteTodo(todo) {
       return (dispatch) => {
         dispatch(removeTodoAction(todo.id));
         return API.deleteTodo(todo.id)
           .catch(() => {
             dispatch(addTodoAction(todo));
-            alert('An error occured. Try again.');
-          });
-      }
-    }
-
-    function handleDeleteGoal(goal) {
-      return (dispatch) => {
-        dispatch(removeGoalAction(goal.id));
-        return API.deleteGoal(goal.id)
-          .catch(() => {
-            dispatch(addGoalAction(goal));
             alert('An error occured. Try again.');
           });
       }
@@ -100,6 +111,17 @@
             callback();
           })
           .catch(() => alert('There was an error. Try again.'));
+      }
+    }
+
+    function handleDeleteGoal(goal) {
+      return (dispatch) => {
+        dispatch(removeGoalAction(goal.id));
+        return API.deleteGoal(goal.id)
+          .catch(() => {
+            dispatch(addGoalAction(goal));
+            alert('An error occured. Try again.');
+          });
       }
     }
 
@@ -207,12 +229,10 @@
       addItem = (e) => {
         e.preventDefault();
 
-        return API.saveTodo(this.input.value)
-          .then((todo) => {
-            this.props.store.dispatch(addTodoAction(todo));
-            this.input.value = '';
-          })
-          .catch(() => alert('There was an error. Try again.'));
+        this.props.store.dispatch(handleAddTodo(
+          this.input.value,
+          () => this.input.value = ''
+        ));
       }
       
       removeItem = (todo) => {
@@ -220,13 +240,7 @@
       }
 
       toggleItem = (id) => {
-        this.props.store.dispatch(toggleTodoAction(id));
-
-        return API.saveTodoToggle(id)
-          .catch(() => {
-            this.props.store.dispatch(toggleTodoAction(id));
-            alert('An error occured. Try again.');
-          });
+        this.props.store.dispatch(handleToggle(id));
       }
 
       render() {
