--- a/redux-course-project-tyler/index.html
+++ b/redux-course-project-tyler/index.html
@@ -306,7 +306,7 @@
       }
     }
 
-    class ConnectedGoals = connect((state) => ({
+    const ConnectedGoals = connect((state) => ({
       goals: state.goals
     }))(Goals);
 
@@ -334,12 +334,46 @@
     }
 
     const ConnectedApp = connect((state) => ({
-      loading: state.loading;
+      loading: state.loading
     }))(App);
 
-    // connect: Render any component, passing that component any data it needs from the store.
-
     const Context = React.createContext();
+
+    function connect (mapStateToProps) {
+      return (Component) => {
+        class Receiver extends React.Component {
+          componentDidMount() {
+            const { subscribe } = this.props.store;
+
+            this.unsubscribe = subscribe(() => this.forceUpdate());
+          }
+
+          componentWillUnmount() {
+            this.unsubscribe();
+          }
+          
+          render() {
+            const { dispatch, getState } = this.props.store;
+            const state = getState();
+            const stateNeeded = mapStateToProps(state);
+
+            return <Component {...stateNeeded} dispatch={dispatch} />
+          }
+        }
+
+        class ConnectedComponent extends React.Component {
+          render() {
+            return (
+              <Context.Consumer>
+                {(store) => <Receiver store={store} />}
+              </Context.Consumer>
+            )
+          }
+        }
+
+        return ConnectedComponent;
+      }
+    }
 
     class Provider extends React.Component {
       render() {
